amf-client/shared/src/test/resources/parser-results/error/inline-non-mutable-ref/lib1.raml
#%RAML Library
uses:
  lib2: lib2.raml
types:
  B:
    properties:
      b:
        lib2.A